--- a/generative-art/index.html
+++ b/generative-art/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+<script type="text/javascript" src="js/lib/lib.js"></script>
 <script type="text/javascript" src="js/hello-world.js"></script>
 </body>
 </html>
