--- a/generative-art/index.html
+++ b/generative-art/index.html
@@ -7,6 +7,6 @@
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 <script type="text/javascript" src="js/lib/lib.js"></script>
-<script type="text/javascript" src="js/practice/hello-world.js"></script>
+<script type="text/javascript" src="js/practice/practice-1.js"></script>
 </body>
 </html>
